force-app/main/default/objects/SBQQ__Quote__c/fields/AAV_Asset_Availability_Flag__c.field-meta.xml
<CustomField>
    <fullName>AAV_Asset_Availability_Flag__c</fullName>
    <description>Availability Status of the Quote</description>
    <label>Asset Availability Flag</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Availability Confirmed</fullName>
            </value>
            <value>
                <fullName>Availability Assumed</fullName>
            </value>
            <value>
                <fullName>Availability NOT Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>