force-app/main/default/objects/SBQQ__Quote__c/fields/Account_Team_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Access__c</fullName>
    <formula>CONTAINS(SBQQ__Account__r.Parent.Account_Team_Member__c,$User.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Team Access</label>
    <type>Checkbox</type>
</CustomField>