force-app/main/default/objects/SBQQ__Quote__c/fields/Acorn_CMT_Link__c.field-meta.xml
<CustomField>
    <fullName>Acorn_CMT_Link__c</fullName>
    <description>A link that will redirect users to the correct CMT entry for the customer with which they are working.</description>
    <formula>HYPERLINK(&quot;http://adcaconlb.wm.com/Acorn/Client/CompanyContract.aspx?CompanyID=&quot;&amp;TEXT(SBQQ__Account__r.Parent.Acorn_Account_Id__c), SBQQ__Account__r.Parent.Name&amp;&quot; CMT Data&quot;, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Clicking this link will open a new tab and bring to the Acorn CMT screens</inlineHelpText>
    <label>Acorn CMT Link</label>
    <type>Text</type>
</CustomField>