force-app/main/default/objects/SBQQ__Quote__c/fields/Acorn_integration_required__c.field-meta.xml
<CustomField>
    <fullName>Acorn_integration_required__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This will stop integration to process, If this flag is false.</description>
    <label>Acorn integration required</label>
    <type>Checkbox</type>
</CustomField>