force-app/main/default/objects/SBQQ__Quote__c/fields/Acorn_Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Integration_Status__c</fullName>
    <formula>TEXT(Integration_Status__c)  +&quot; &quot;+

(CASE( Integration_Status__c , 
&apos;Success&apos;, IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Success&quot;), 
&apos;Failure&apos;,IMAGE( &quot;/img/samples/flag_red.gif&quot; ,&quot;Failure&quot; ),
&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn Integration Status</label>
    <type>Text</type>
</CustomField>