force-app/main/default/objects/SBQQ__Quote__c/fields/Acorn_Last_Modified_SUser_ID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Last_Modified_SUser_ID__c</fullName>
    <formula>Last_Submitted_Modified_User__r.Acorn_SUser_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn Last Modified SUser ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>