force-app/main/default/objects/SBQQ__Quote__c/fields/Acorn_Owner_SUser_ID__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Owner_SUser_ID__c</fullName>
    <formula>Owner:User.Acorn_SUser_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acorn Owner SUser ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>