force-app/main/default/objects/SBQQ__Quote__c/fields/Acorn_Work_Order_Details__c.field-meta.xml
<CustomField>
    <fullName>Acorn_Work_Order_Details__c</fullName>
    <label>Acorn Work Order Details</label>
    <length>131071</length>
    <type>Html</type>
</CustomField>