force-app/main/default/objects/SBQQ__Quote__c/fields/Action_Reason__c.field-meta.xml
<CustomField>
    <fullName>Action_Reason__c</fullName>
    <label>Action Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Responsive Vendor</fullName>
            </value>
            <value>
                <fullName>Non-Responsive Customer</fullName>
            </value>
            <value>
                <fullName>Requested Configuration Not Available</fullName>
            </value>
            <value>
                <fullName>Missing Price Calculation</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>Cannot Find Vendor to Provide Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Project Required</fullName>
            </value>
            <value>
                <fullName>Pending Customer Response</fullName>
            </value>
            <value>
                <fullName>Pending Vendor Response</fullName>
            </value>
            <value>
                <fullName>Customer Escalation</fullName>
            </value>
            <value>
                <fullName>Vendor Escalation</fullName>
            </value>
            <value>
                <fullName>Price Calculation not Available</fullName>
            </value>
            <value>
                <fullName>Approvals Missing/Conflicting Information</fullName>
            </value>
            <value>
                <fullName>Missing Customer Specific Information</fullName>
            </value>
            <value>
                <fullName>Pending Customer Approval - Quote</fullName>
            </value>
            <value>
                <fullName>Pending Customer Approval - Quote Only</fullName>
            </value>
            <value>
                <fullName>Pending Response from Customer</fullName>
            </value>
            <value>
                <fullName>Pending Response from Hauler - WM</fullName>
            </value>
            <value>
                <fullName>Pending Response from Hauler - 3PH</fullName>
            </value>
            <value>
                <fullName>Pending Internal Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>