force-app/main/default/objects/SBQQ__Quote__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status Change</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Pending Information</fullName>
            </value>
            <value>
                <fullName>Additional Information Needed</fullName>
            </value>
            <value>
                <fullName>Non-SBS Coordination Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>