force-app/main/default/objects/SBQQ__Quote__c/fields/Alternate_Description__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Description__c</fullName>
    <label>Alternate Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>