force-app/main/default/objects/SBQQ__Quote__c/fields/Alternate_Service_Provided__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Service_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternate Service Provided</label>
    <type>Checkbox</type>
</CustomField>