force-app/main/default/objects/SBQQ__Quote__c/fields/Approve_NTE_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approve_NTE_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approve NTE Amount</label>
    <type>Checkbox</type>
</CustomField>