force-app/main/default/objects/SBQQ__Quote__c/fields/Assigned_To_Role__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To_Role__c</fullName>
    <formula>Assigned_To__r.UserRole.Name</formula>
    <label>Assigned To Role</label>
    <type>Text</type>
</CustomField>