force-app/main/default/objects/SBQQ__Quote__c/fields/Assing_To_Me_Action__c.field-meta.xml
<CustomField>
    <fullName>Assing_To_Me_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this Field true when user clicks assign to me button.</description>
    <label>Assign To Me Action</label>
    <type>Checkbox</type>
</CustomField>