force-app/main/default/objects/SBQQ__Quote__c/fields/Business_Rule__c.field-meta.xml
<CustomField>
    <fullName>Business_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Rule</label>
    <referenceTo>Business_Rule__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>