force-app/main/default/objects/SBQQ__Quote__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <description>Added new field to story Cancellation Note for story 23803</description>
    <label>Cancellation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>