force-app/main/default/objects/SBQQ__Quote__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>For SDT-21237 - To navigate from a Quote to the case from which it is originated</description>
    <formula>HYPERLINK(
&quot;/&quot; &amp; SBQQ__Opportunity2__r.Case__c,SBQQ__Opportunity2__r.Case__r.CaseNumber, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case</label>
    <type>Text</type>
</CustomField>