force-app/main/default/objects/SBQQ__Quote__c/fields/Case_Number__c.field-meta.xml
<CustomField>
    <fullName>Case_Number__c</fullName>
    <formula>TEXT(VALUE(SBQQ__Opportunity2__r.Case__r.CaseNumber))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Number</label>
    <type>Text</type>
</CustomField>