force-app/main/default/objects/SBQQ__Quote__c/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <formula>Text(SBQQ__Opportunity2__r.Case__r.Case_Reason__c)</formula>
    <label>Case Reason</label>
    <type>Text</type>
</CustomField>