force-app/main/default/objects/SBQQ__Quote__c/fields/Case_record_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_record_Type__c</fullName>
    <formula>SBQQ__Opportunity2__r.Case_record_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case record Type</label>
    <type>Text</type>
</CustomField>