force-app/main/default/objects/SBQQ__Quote__c/fields/Case_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Type__c</fullName>
    <formula>Text(SBQQ__Opportunity2__r.Case__r.Case_Sub_Type__c)</formula>
    <label>Case Sub-Type</label>
    <type>Text</type>
</CustomField>