force-app/main/default/objects/SBQQ__Quote__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <formula>Text(SBQQ__Opportunity2__r.Case__r.Case_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Type</label>
    <type>Text</type>
</CustomField>