force-app/main/default/objects/SBQQ__Quote__c/fields/Cost_Price_Override_Description__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Override_Description__c</fullName>
    <description>Creating this field as a part of Sprint 18, SDT-25271</description>
    <label>Cost/Price Override Description</label>
    <type>TextArea</type>
</CustomField>