force-app/main/default/objects/SBQQ__Quote__c/fields/Cost_Price_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cost_Price_Override_Reason__c</fullName>
    <description>Adding this field as a part of SDT-25271 in Sprint 18</description>
    <label>Cost/Price Override Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Modeled Rates Provided</fullName>
            </value>
            <value>
                <fullName>Pricing Vendor Unable to Provide Service</fullName>
            </value>
            <value>
                <fullName>Pricing Vendor is not the Incumbent</fullName>
            </value>
            <value>
                <fullName>Pricing Rates Were Incorrect for Core Service</fullName>
            </value>
            <value>
                <fullName>Pricing Rates Were Incorrect for Ancillary Service/PFE</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>