force-app/main/default/objects/SBQQ__Quote__c/fields/Created_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Me__c</fullName>
    <formula>CreatedBy.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Me</label>
    <type>Checkbox</type>
</CustomField>