force-app/main/default/objects/SBQQ__Quote__c/fields/Customer_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Date__c</fullName>
    <description>field created based on 30514</description>
    <label>Customer Request Date</label>
    <type>Date</type>
</CustomField>