force-app/main/default/objects/SBQQ__Quote__c/fields/Days_Quote_not_Updated__c.field-meta.xml
<CustomField>
    <fullName>Days_Quote_not_Updated__c</fullName>
    <formula>TODAY()  - datevalue( Last_Action_Performed__c)</formula>
    <label>Days Quote not Updated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>