force-app/main/default/objects/SBQQ__Quote__c/fields/DoResyncOutBoundcall__c.field-meta.xml
<CustomField>
    <fullName>DoResyncOutBoundcall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Resync is true then Out Bound message via workflow is invoked</description>
    <inlineHelpText>This filed is used to invoke outbound message to Acorn</inlineHelpText>
    <label>DoResyncOutBoundcall</label>
    <type>Checkbox</type>
</CustomField>