force-app/main/default/objects/SBQQ__Quote__c/fields/Genesys_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Enabled__c</fullName>
    <formula>Assigned_To__r.Genesys_Enabled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Genesys Enabled</label>
    <type>Checkbox</type>
</CustomField>