force-app/main/default/objects/SBQQ__Quote__c/fields/Genesys_Record_Created__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Genesys Record Created</label>
    <type>Checkbox</type>
</CustomField>