force-app/main/default/objects/SBQQ__Quote__c/fields/GR_Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>GR_Service_Flag__c</fullName>
    <defaultValue>&apos;CS&apos;</defaultValue>
    <label>GR Service Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>