force-app/main/default/objects/SBQQ__Quote__c/fields/Integration_Status__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status__c</fullName>
    <label>Integration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
                <color>#33CC00</color>
                <label>Success</label>
            </value>
            <value>
                <fullName>Failure</fullName>
                <color>#FF0000</color>
                <label>Failure</label>
            </value>
            <value>
                <fullName>Acorn integration not required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>