force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Amendment_Quote_Approved_By_Sales__c.field-meta.xml
<CustomField>
    <fullName>Is_Amendment_Quote_Approved_By_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDT-41186-Created-This is checked when an Amendment quote is approved by a Sales Team (UCC=SalesGen, SalesPrem)</description>
    <label>Is Amendment Quote Approved By Sales</label>
    <type>Checkbox</type>
</CustomField>