force-app/main/default/objects/SBQQ__Quote__c/fields/Is_Genesys_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Genesys_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is created to check if Genesys record needs to be created on this Quote or Not.</description>
    <label>Is Genesys Required</label>
    <type>Checkbox</type>
</CustomField>