force-app/main/default/objects/SBQQ__Quote__c/fields/is_NTE_Quote__c.field-meta.xml
<CustomField>
    <fullName>is_NTE_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is NTE Quote</label>
    <type>Checkbox</type>
</CustomField>