force-app/main/default/objects/SBQQ__Quote__c/fields/IsQuoteLineSynced__c.field-meta.xml
<CustomField>
    <fullName>IsQuoteLineSynced__c</fullName>
    <description>This will be true if Quote&apos;s all QuoteLines are synced with Acorn</description>
    <label>IsQuoteLineNotSynced</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.IsSynced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>