force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Action_Performed__c.field-meta.xml
<CustomField>
    <fullName>Last_Action_Performed__c</fullName>
    <label>Last Action Performed</label>
    <type>DateTime</type>
</CustomField>