force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Modified_by_Me__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_by_Me__c</fullName>
    <formula>LastModifiedById  =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified by Me</label>
    <type>Checkbox</type>
</CustomField>