force-app/main/default/objects/SBQQ__Quote__c/fields/Last_Submitted_Modified_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Submitted_Modified_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Submitted/Modified User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>