force-app/main/default/objects/SBQQ__Quote__c/fields/Location_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Customer_Name__c</fullName>
    <formula>SBQQ__Account__r.Customer_Location_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Customer Name</label>
    <type>Text</type>
</CustomField>