force-app/main/default/objects/SBQQ__Quote__c/fields/Logged_In_User_Category__c.field-meta.xml
<CustomField>
    <fullName>Logged_In_User_Category__c</fullName>
    <description>SDT-41186-Created the field to store the type of user who logged in. E.g. SALESGEN and SALESPREM are categorized as SALES users.</description>
    <formula>IF((ISPICKVAL($User.User_categorization_code__c, &apos;SALESGEN&apos;) || ISPICKVAL($User.User_categorization_code__c, &apos;SALESPREM&apos;)), &apos;SALES&apos;, IF(ISPICKVAL($User.User_categorization_code__c, &apos;SSMGEN&apos;), &apos;SSM&apos;,
IF(ISPICKVAL($User.User_categorization_code__c, &apos;CSRES&apos;), &apos;SST&apos;, &apos;NONE&apos;)))</formula>
    <label>Logged In User Category</label>
    <type>Text</type>
</CustomField>