force-app/main/default/objects/SBQQ__Quote__c/fields/Manual_Approval_Action__c.field-meta.xml
<CustomField>
    <fullName>Manual_Approval_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Approval Action</label>
    <type>Checkbox</type>
</CustomField>