force-app/main/default/objects/SBQQ__Quote__c/fields/My_Quote__c.field-meta.xml
<CustomField>
    <fullName>My_Quote__c</fullName>
    <formula>OR(Assigned_To__c =  $User.Id, LastModifiedById = $User.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Quote</label>
    <type>Checkbox</type>
</CustomField>