force-app/main/default/objects/SBQQ__Quote__c/fields/Next_Action_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Due_Date__c</fullName>
    <label>Next Action Due Date</label>
    <type>DateTime</type>
</CustomField>