force-app/main/default/objects/SBQQ__Quote__c/fields/Next_Action_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Action_Start_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Next Action Start Date</label>
    <type>DateTime</type>
</CustomField>