force-app/main/default/objects/SBQQ__Quote__c/fields/Onsite_Contact__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Onsite Contact)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>