force-app/main/default/objects/SBQQ__Quote__c/fields/Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Child Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>