force-app/main/default/objects/SBQQ__Quote__c/fields/Pending_Information__c.field-meta.xml
<CustomField>
    <fullName>Pending_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Information</label>
    <type>Checkbox</type>
</CustomField>