force-app/main/default/objects/SBQQ__Quote__c/fields/PO_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>PO_Mandatory__c</fullName>
    <description>SDT-20110, backend field is being used to determine if Customer Ref# on Quote Order is mandatory for any of the Pickup, Delivery combination present in picklist values.</description>
    <label>PO Mandatory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NS_PERM</fullName>
            </value>
            <value>
                <fullName>NS_TEMP</fullName>
            </value>
            <value>
                <fullName>PCK_EXPCK</fullName>
            </value>
            <value>
                <fullName>PCK_ER</fullName>
            </value>
            <value>
                <fullName>PCK_OC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>