force-app/main/default/objects/SBQQ__Quote__c/fields/Primary_Segment__c.field-meta.xml
<CustomField>
    <fullName>Primary_Segment__c</fullName>
    <formula>Text( SBQQ__Account__r.Primary_Segment__c)</formula>
    <label>Primary Segment</label>
    <type>Text</type>
</CustomField>