force-app/main/default/objects/SBQQ__Quote__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only active projects may be associated to quotes</errorMessage>
        <filterItems>
            <field>Project_Code__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Code__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Project_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>