force-app/main/default/objects/SBQQ__Quote__c/fields/Project_Services_Request__c.field-meta.xml
<CustomField>
    <fullName>Project_Services_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Services Request</label>
    <type>Checkbox</type>
</CustomField>