force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Only__c.field-meta.xml
<CustomField>
    <fullName>Quote_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quote Only</label>
    <type>Checkbox</type>
</CustomField>