force-app/main/default/objects/SBQQ__Quote__c/fields/Quote_Thread_Id__c.field-meta.xml
<CustomField>
    <fullName>Quote_Thread_Id__c</fullName>
    <formula>&quot;ref:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT(Id,5) &amp; SUBSTITUTE(Left(RIGHT(Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT(Id,5) &amp; &quot;:ref&quot; &amp; &quot;lst:_&quot; &amp; LEFT($Organization.Id,5) &amp; SUBSTITUTE(RIGHT($Organization.Id,11), &quot;0&quot;, &quot;&quot; )&amp; &quot;._&quot; &amp; LEFT($User.Id,5) &amp; SUBSTITUTE(Left(RIGHT($User.Id,10), 5), &quot;0&quot;, &quot;&quot;) &amp; RIGHT($User.Id,5) &amp; &quot;:lst&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Thread Id</label>
    <type>Text</type>
</CustomField>