force-app/main/default/objects/SBQQ__Quote__c/fields/QuoteProcuredStatus__c.field-meta.xml
<CustomField>
    <fullName>QuoteProcuredStatus__c</fullName>
    <description>This field will show the Quote Procurement status.</description>
    <label>Quote Procured Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>