force-app/main/default/objects/SBQQ__Quote__c/fields/Remodel_Grand_Opening__c.field-meta.xml
<CustomField>
    <fullName>Remodel_Grand_Opening__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remodel/Grand Opening</label>
    <type>Checkbox</type>
</CustomField>