force-app/main/default/objects/SBQQ__Quote__c/fields/Resubmit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Resubmit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resubmit Flag</label>
    <type>Checkbox</type>
</CustomField>